# gamepad-mapper

./: .gitignore  Application.cpp  Application.h  Application_Multiple.cpp  CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  CMakeProject1.h  CONTRIBUTING.md  Constants.h  DirectInputManager.cpp  DirectInputManager.h  GamepadDevice.cpp  ILogger.h  InputProcessor.cpp  JsonConfigManager.cpp  KeyResolver.cpp  Logger.cpp  Multi-Gamepad-Support-Design.md  MultipleGamepadManager.cpp  MultipleGamepadManager.h  README.md  TESTING_GUIDE.md  UI_Improvement_Proposal.md  WinMain.cpp  WinMain_Multiple.cpp  WindowManager.cpp  WindowManager.h  b.sh  build.bat  build.sh  build_multiple.sh  gamepad_config_Controller_(XBOX_360_For_Windows).json  gamepad_config_gaming.json  gamepad_config_ps4.json  mingw-w64-toolchain.cmake  my_function.cpp  tmp_rovodev_multiple_gamepad_analysis.md  tmp_rovodev_multiple_gamepad_implementation_summary.md  vcpkg-configuration.json  (+1 more)
build_multiple/: CMakeCache.txt  Makefile  cmake_install.cmake  gamepad_config_Wireless_Gamepad.json
config/: README.md
config/samples/: gamepad_config_media.json  gamepad_config_productivity.json  gamepad_config_switch_pro.json  gamepad_config_xbox.json
docs/: API_REFERENCE.md  API_REFERENCE_ORIGINAL.md  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SIMPLIFICATION_REPORT.md  DOCUMENT_IMPLEMENTATION_ANALYSIS.md  LOGGER_IMPROVEMENT_ANALYSIS.md  LOGGER_MIGRATION_PLAN.md  MIGRATION_SUCCESS_SUMMARY.md  README.md  REFACTORING_STRATEGY.md  TROUBLESHOOTING.md
docs/internal/: CONFIGURATION_FILES_CREATION_REPORT.md  CONFIG_ORGANIZATION_REPORT.md  CORE_MODERN_INTEGRATION_ANALYSIS.md  CORE_MODERN_INTEGRATION_PLAN.md  DOCUMENT_SEPARATION_COMPLETION_REPORT.md  FRAME_LOG_TO_DISPLAY_REFACTORING_PLAN.md  IMPROVEMENT_HISTORY.md  INTERNAL_DOCS_REFRESH_SUMMARY.md  LOG_SYSTEM_SEPARATION_ANALYSIS.md  PROJECT_STATUS.md  README.md
src/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  Constants.h  DisplayBuffer.cpp  DisplayBuffer.h  EnhancedRenderer.cpp  EnhancedRenderer.h  EnhancedWindowManager.cpp  EnhancedWindowManager.h  GamepadDevice.cpp  GamepadDevice.h  GamepadManager.cpp  GamepadManager.h  GamepadMapper.rc  IDisplayBuffer.h  ILogger.h  InputProcessor.cpp  InputProcessor.h  JsonConfigManager.cpp  JsonConfigManager.h  KeyResolver.h  Logger.cpp  Logger.h  Logger_DEPRECATED.h  ModernLogger.cpp  ModernLogger.h  MultipleGamepadManager.cpp  MultipleGamepadManager.h  WinMain.cpp  WindowManager.cpp  WindowManager.h  resource.h
src/core/: Algorithms.h  Concepts.h  Core.h  Coroutines.h  Expected.h  Logging.h  Memory.h  RAII.h  TypeErasure.h
src/modern/: AlgorithmComparisons.md  ModernGamepadDevice.h  ModernInputProcessor.h  ModernMultipleGamepadManager.h
test/: my_function_test.cpp
